# LockBox

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: 94129797fea6_init.py
app/: database.py  main.py  models.py  schemas.py
app/routers/: items.py  users.py
app/static/css/: main.css
app/static/js/: account.js  crypto.js  import_data.js  login.js  register.js  vault.js
app/templates/: layout.html
app/templates/items/: checkup.html  import_data.html
app/templates/users/: 2fa_verification.html
routers/: items.py  users.py
static/js/: 2fa_verification.js  account.js  checkup.js  crypto.js  login.js  main.js  register.js  vault.js
templates/: layout.html
templates/items/: vault.html
templates/users/: account.html  login.html  register.html
