[project]
name = "lockbox"
version = "0.1.0"
description = "Self-hosted E2EE password manager for secure online credentials."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.0",
    "psycopg2-binary>=2.9.11",
    "pyotp>=2.9.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
]
